--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -1,5 +1,5 @@
-body {
-  margin: 0;
-}
+//layout setups
+@import "layout/setups.scss";
+@import "layout/fonts.scss";
 
-@import 'common/greating';
+@import 'blocks/**/*.scss';
