--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -1,19 +1,26 @@
 extends ../main.layout.pug
 block content
     section.section.hero
+        .hero__bg
+            img(src="assets/img/bg/portfolio.jpg", alt="").hero__bg-img
+
         ul.socials
             each item in ['fb', 'gh', 'in']
                 li.socials__item
                     a(href="#" class=`socials__link socials__link_${item}`)                    
         a(href="#").hamburger
         a(href="#").down-arrow
-        .hero__title
-            .section__title
-                img(src="../../", alt="").section-title
-                .user.hero__user-block
-                    .user__photo
-                    .user__name
-                    .user__desc
+            img(src="assets/img/icons/arrow_down.svg", alt="").down-arrow__icon
+
+        .hero__title            
+            img(src="assets/img/decor/portfolio-header.png", alt="").section-title
+            .user.hero__user-block
+                .user__photo
+                    .user__photo-avatar
+                        img(src="assets/img/content/user.jpg", alt="").user__photo-img
+                .user__name Lena Ricabal Aviles
+                .user__desc Personal review
+
     section.section.about
         .about__left
             .title.about__section-title
