--- a/source/template/main-layout.pug
+++ b/source/template/main-layout.pug
@@ -1,11 +1,14 @@
+include mixins/mixins
+
 doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        link(rel="stylesheet", href="assets/css/app.css")
         link(rel="stylesheet", href="assets/css/foundation.css")
+        link(rel="stylesheet", href="assets/css/normalize.css")
+        link(rel="stylesheet", href="assets/css/app.css")
         title About
     body
         .wrapper
