--- a/source/template/mixins/mixins.pug
+++ b/source/template/mixins/mixins.pug
@@ -1,2 +1,7 @@
 mixin title (title, url, additionClass)
     .title(style=`background-image: url('assets/img/decor/${url}')` class=additionClass)= title
+
+mixin skill__circle (rate)
+    svg(viewBox="0 0 110 110" class = "skill__circle")
+        circle(r="45" cx="50%" cy="50%" fill="none" class="circle__first")
+        circle(r="45" cx="50%" cy="50%" transform="rotate(-90 55 55)" class=`circle__second circle-${rate}`)
