--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -19,7 +19,7 @@ block content
                     .user__photo-avatar
                         img(src="assets/img/content/user.jpg", alt="").user__photo-img
                 .user__name Lena Ricabal Aviles
-                .user__desc Personal review
+                .user__desc QA Engineer - Delphi Software <br>Ukraine
 
     section.section.about
         .about__left
@@ -32,12 +32,13 @@ block content
             .user-about
                 .user-about__picture
                     img(src="assets/img/content/user.jpg", alt="").user-about__photo-img
-                .user-about__title.subtitle
+                .user-about__title.subtitle.subtitle_about
                     | Who am I
                 .user-about__text
-                    p I am a front-end developer. I'm 33.
-                    p I like it! 
-
+                    p.user-about__text_paragraph Hello! I'm an enthusiastic front-end developer with excellent knowledge of HTML and CSS - cross-browser and responsive markup with semantic, clear and easily readable code.
+                    p.user-about__text_paragraph I carefully follow the latest trends and innovations in the field of information technology. I use the most effective methods for solving problems.
+                    p.user-about__text_paragraph I am proficient in text editor Atom, Brackets, PhpStorm, graphics editor Adobe Photoshop. 
+                    
         .about__right
             svg(
                 viewbox="0 0 1000 100" 
@@ -46,31 +47,22 @@ block content
                 polygon(points="0,100 1000,100 1000,0")
             .about-data__description
                 .about-data__title
-                    .subtitle What can I do
+                    .subtitle.subtitle_about What can I do
                 .about-data__text
-                    p Lorem ipsum dolor
+                    p.about-data__text_paragraph I'm a quick-learner and really hungry for knowledge, I am purposeful and persistent. I also have excellent communication skills, I'm friendly and ready to work in a team for best result. Difficult tasks never frighten me.
+                    p.about-data__text_paragraph I just love to code - and I do it with a passion for clean, well commented and standard compliant code.
             .about-data__content
             ul.skills
-                each skill in skills
-                    each skillsArray, skillName in skill
+                each skillGroup in skills
+                    each skillsArray, skillGroupName in skillGroup
                         li.skills__item
                             .skill-section
-                                .skill-section__title= skillName
+                                .skill-section__title= skillGroupName
                                 ul.skill-section__list  
-                                    each skillTitle in skillsArray
-                                        li.skills-section__item
-                                            .skill
-                                                svg.skill__circle
-                                                .skill__name= skillTitle
-                //- ul.skills
-                //-     each skill in ['Frontend', 'Backend', 'Workflow']
-                //-         li.skills__item
-                //-             .skill-section
-                //-                 .skill-section__title= skill
-                //-                 ul.skill-section__list  
-                //-                     each skillName in ['HTML5', 'CSS3', 'jQuery']
-                //-                         li.skills-section__item
-                //-                             .skill
-                //-                                 svg.skill__circle
-                //-                                 .skill__name= skillName 
+                                    each skill in skillsArray
+                                        each skillRate, skillTitle in skill
+                                            li.skills-section__item
+                                                .skill
+                                                    +skill__circle(skillRate)                                                    
+                                                    .skill__name= skillTitle                
     section.section.map
