socials icons added

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -3,6 +3,7 @@ $beige: #eeebdf;
 $main-font-color: #373e42;
 $skills-grey: #dfdcd5;
 $skills-green: #10c1a8;
+$socials-color: #fff;
 
 //layout setups
 @import "layout/setups.scss";
