header&footer start

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -4,6 +4,8 @@ $main-font-color: #373e42;
 $skills-grey: #dfdcd5;
 $skills-green: #10c1a8;
 $socials-color: #fff;
+$footer-color: rgba(#3c4044, .85);
+$menu-color: #283e4a;
 
 //layout setups
 @import "layout/setups.scss";
