--- a/source/style/blocks/hero.scss
+++ b/source/style/blocks/hero.scss
@@ -4,6 +4,11 @@
 	position: relative;
 }
 
+.hero-socials {
+	position: absolute;
+	top: 35px;
+}
+
 .hero__title {
 	@include centered(y);
 	text-align: center;
