--- a/source/style/layout/setups.scss
+++ b/source/style/layout/setups.scss
@@ -8,12 +8,22 @@ body {
 	font-family: "Roboto", Arial, sans-serif;
 	font-size: 16px;
 	line-height: 1.42;
+	background: #f0f0f0;
 }
 
 .wrapper {
 	min-height: 100%;
 	position: relative;
 	overflow: hidden;
+}
+
+.container {
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.empty {
+	height: 150px;
 }
 
 ul {
@@ -24,6 +34,10 @@ ul {
 
 p {
 	margin: 0;
+}
+
+a {
+	text-decoration: none;
 }
 
 h1, h2, h3, h4, h5 {
