--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -3,14 +3,15 @@ block content
     section.section.hero
         .hero__bg
             img(src="assets/img/bg/portfolio.jpg", alt="").hero__bg-img
-
-        ul.socials            
-            each item in ['fb', 'gh', 'in']
-                li.socials__item
-                    a(href="#" class=`socials__link socials__link_${item}`)
-                        svg(class=`socials__icon socials__icon_${item}`)
-                            use(xlink:href=`assets/img/sprite.svg#${item}`)                    
-        a(href="#").hamburger
+        
+        .container
+            ul.socials.hero-socials            
+                each item in ['fb', 'gh', 'in']
+                    li.socials__item
+                        a(href="#" class=`socials__link socials__link_${item}`)
+                            svg(class=`socials__icon socials__icon_${item}`)
+                                use(xlink:href=`assets/img/sprite.svg#${item}`)                    
+            a(href="#").hamburger
         a(href="#").down-arrow
             img(src="assets/img/icons/arrow_down.svg", alt="").down-arrow__icon
 
@@ -68,3 +69,4 @@ block content
                                                     +skill__circle(skillRate)                                                    
                                                     .skill__name= skillTitle                
     section.section.map
+    .empty
