--- a/source/style/blocks/skill-section.scss
+++ b/source/style/blocks/skill-section.scss
@@ -1,3 +1,8 @@
+.skills-section {
+	width: $container-width / 2;		
+	padding-left: 40px;
+}
+
 .skills-section__item {
 	position: relative;	
 	margin-left: 40px;
