--- a/source/template/main-layout.pug
+++ b/source/template/main-layout.pug
@@ -15,7 +15,7 @@ html(lang="en")
             header.header
                 .container
                     .header__logo
-                        a.logo.header__logo-link
+                        a(href="#").logo.header__logo-link
                             img(src="assets/img/logo.png" alt="").logo__img.header__logo-img
                     .header__search
                         .search
