--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -7,6 +7,8 @@ $socials-color: #fff;
 $footer-color: rgba(#3c4044, .85);
 $menu-color: #283e4a;
 
+$container-width: 1200px;
+
 //layout setups
 @import "layout/setups.scss";
 @import "layout/fonts.scss";
