--- a/source/style/blocks/about-data.scss
+++ b/source/style/blocks/about-data.scss
@@ -1,5 +1,10 @@
+.about-data__description, .about-data__content {
+	width: $container-width / 2;		
+	padding-left: 40px;
+}
+
 .about-data__text {	
-	margin: 0 40px;
+	// margin: 0 40px;
 	position: relative;
 
 	&_paragraph {
