--- a/source/style/blocks/footer.scss
+++ b/source/style/blocks/footer.scss
@@ -8,7 +8,13 @@
 
 .footer__first-row {
     height: 75px;
-    border-bottom: grey solid 1px;
+    line-height: 75px;
+    border-bottom: solid 1px rgba(#fff, .2);
+}
+
+.footer__second-row { 
+    height: 75px;   
+    line-height: 75px;
 }
 
 .footer__menu {
