--- a/source/style/layout/setups.scss
+++ b/source/style/layout/setups.scss
@@ -18,7 +18,7 @@ body {
 }
 
 .container {
-    width: 1200px;
+    width: $container-width;
     margin: 0 auto;
 }
 
@@ -29,7 +29,10 @@ body {
 ul {
 	padding: 0;
 	margin: 0;
-	list-style: none;
+
+	li {
+		list-style: none;
+	}
 }
 
 p {
