main.pug almost done

--- a/source/style/blocks/hero.scss
+++ b/source/style/blocks/hero.scss
@@ -22,3 +22,12 @@
 .hero__user-block {
 	@include centered();
 }
+
+.hero-user__photo {
+	width: 147px;
+	height: 147px;
+}
+
+.hero-user__photo-img {
+	width: 147px;	
+}
