--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -18,9 +18,9 @@ block content
         .hero__title            
             img(src="assets/img/decor/portfolio-header.png", alt="").section-title
             .user.hero__user-block
-                .user__photo
+                .user__photo.hero-user__photo
                     .user__photo-avatar
-                        img(src="assets/img/content/user.jpg", alt="").user__photo-img
+                        img(src="assets/img/content/user.jpg", alt="").user__photo-img.hero-user__photo-img
                 .user__name Lena Ricabal Aviles
                 .user__desc QA Engineer - Delphi Software <br>Ukraine
 
