--- a/source/template/pages/skills.pug
+++ b/source/template/pages/skills.pug
@@ -9,7 +9,7 @@ block content
                     a.breadcrumbs__link Skills
 
         section.section.skills-rate
-            .skills-rate__title.subtitle 
+            h2.skills-rate__title.subtitle 
                 | Skills Rate
             ul.skills
                 each skillGroup in skills
