--- a/source/style/blocks/sidebar.scss
+++ b/source/style/blocks/sidebar.scss
@@ -1,7 +1,11 @@
 .sidebar {
+    float: left;
     width: 25%;
-    background-color: $beige;
-    min-height: 100vh;
+    background-color: #fff;
+    border: 1px solid rgba(#000, .1);
+	// border-radius: 5px;
+	margin: 10px 0;	
+    min-height: 100%;     
 }
 
 .sidebar__socials {
@@ -19,7 +23,14 @@
     font-size: 20px;
 }
 
-.sidebar__skills {
+.sidebar__section {    
+    width: 100%;
+    text-align: center;
+    padding: 20px; 
+    border-bottom: 1px solid rgba(#000, .1);         
+}
+
+.sidebar__courses {
     width: 80%;
-    margin: 10px auto;
+    margin: 0 auto;
 }
