--- a/source/style/blocks/skills-totals.scss
+++ b/source/style/blocks/skills-totals.scss
@@ -6,7 +6,9 @@
     display: inline-block;
     width: 1rem;
     height: 1rem;
-    fill: $main-font-color;          
+    fill: $main-font-color;  
+    position: relative;        
+    top: 3px;
   }
 
 // .skills-totals__icon_expert {
@@ -21,8 +23,13 @@
 //     fill: red;
 // }
 
-.skills-totals__name {
-    color: $main-font-color;
-    margin-left: 5px;
+.skills-totals__text {    
     font-variant: small-caps;
 }
+
+.skills-totals__text, .skills-totals__skills-average {
+    color: $main-font-color;
+    margin-left: 5px;
+    // font-variant: small-caps;
+}
+
