courses.pug started

--- a/source/style/blocks/skills-totals.scss
+++ b/source/style/blocks/skills-totals.scss
@@ -6,7 +6,8 @@
     display: inline-block;
     width: 1rem;
     height: 1rem;
-    fill: $main-font-color;  
+    // fill: $main-font-color;  
+    fill: $skills-green;
     position: relative;        
     top: 3px;
   }
