--- a/source/style/blocks/about-data.scss
+++ b/source/style/blocks/about-data.scss
@@ -1,6 +1,6 @@
 .about-data__description, .about-data__content {
-	width: $container-width / 2;		
-	padding-left: 40px;
+	// width: $container-width / 2;		
+	padding: 0 40px;
 }
 
 .about-data__text {	
