--- a/source/style/blocks/skill-section.scss
+++ b/source/style/blocks/skill-section.scss
@@ -1,6 +1,6 @@
 .skills-section {
-	width: $container-width / 2;		
-	padding-left: 40px;
+	// width: $container-width / 2;		
+	padding: 0 40px;
 }
 
 .skills-section__item {
