--- a/source/style/layout/setups.scss
+++ b/source/style/layout/setups.scss
@@ -1,5 +1,13 @@
 html {
 	height: 100%;
+
+	@include tablets() {
+		font-size: 14px;
+	}
+
+	@include phones() {
+		font-size: 13px;
+	}
 }
 
 body {
@@ -18,9 +26,17 @@ body {
 }
 
 .container {
-	width: $container-width;
+	max-width: 1200px;
 	@extend %clearfix;
-    margin: 0 auto;
+	margin: 0 auto;
+	
+	@include tablets() {
+		max-width: 768px;
+	}
+
+	@include phones() {
+		max-width: 480px;
+	}
 }
 
 .empty {
