--- a/source/style/blocks/sidebar.scss
+++ b/source/style/blocks/sidebar.scss
@@ -2,10 +2,14 @@
     float: left;
     width: 25%;
     background-color: #fff;
-    border: 1px solid rgba(#000, .1);
-	// border-radius: 5px;
+    border: 1px solid rgba(#000, .1);	
 	margin: 10px 0;	
-    min-height: 100%;     
+    min-height: 100%; 
+    
+    @include tablets() {
+        float: none;
+        width: 100%;
+    }
 }
 
 .sidebar__socials {
