--- a/source/style/helpers/mixins.scss
+++ b/source/style/helpers/mixins.scss
@@ -26,6 +26,12 @@
     }
 }
 
+@mixin laptop() {
+    @media screen and (max-width: 992px) {
+        @content;
+    }
+}
+
 @mixin tablets() {
     @media screen and (max-width: 768px) {
         @content;
